# garbage_on_theme_numerical_metod

./: Bicubic.hpp  CMakeLists.txt  Jacobian.hpp  Orts.hpp  base_func.hpp  lagrange_polynom.hpp  lagrange_solver.hpp  libman_solver.hpp  main.cpp  main_viz.hpp  surfacegraph.cpp  surfacegraph.hpp  task_dirihlet_base.hpp
